# STM32_PROJEKT_SM

./: .gitignore  README.md
GUI/: GUI.sln
GUI/GUI/: Form1.Designer.cs  Form1.cs  GUI.csproj  packages.config
GUI/GUI/Properties/: AssemblyInfo.cs
GUI/GUI/System/IO/: Hashing.cs
MATLAB_MODEL/: NASTAWY PID PWM 12.5%.txt  model.m  model_simulink.slx
MATLAB_MODEL/pomiary/: samples_20-29-27_PWM15%.csv  samples_21-42-36_PWM12.5%.csv  samples_23-26-35_PWM10%.csv
SERIAL_PORT/: pyproject.toml
SERIAL_PORT/model/: model.py
SERIAL_PORT/pomiary/: samples_18-03-48_PWM20%.csv
SERIAL_PORT/serial_port/: main.py
STM32_PROJEKT/: .cproject  .mxproject  STM32_PROJEKT Debug.launch  STM32_PROJEKT.ioc
STM32_PROJEKT/Core/Inc/: BMP280_STM32.h  FLASH_SECTOR.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
STM32_PROJEKT/Core/Src/: BMP280_STM32.c  FLASH_SECTOR.c  crc.c  i2c.c  main.c  rtc.c  stm32f7xx_it.c  tim.c  usart.c
STM32_PROJEKT/Debug/: STM32_PROJEKT.elf  STM32_PROJEKT.list  STM32_PROJEKT.map  makefile  objects.list
STM32_PROJEKT/Debug/Core/Src/: BMP280_STM32.cyclo  BMP280_STM32.d  BMP280_STM32.su  FLASH_SECTOR.cyclo  FLASH_SECTOR.d  FLASH_SECTOR.su  crc.cyclo  crc.d  crc.su  dma.d  gpio.d  i2c.d  main.cyclo  main.d  main.su  rtc.d  stm32f7xx_it.cyclo  stm32f7xx_it.su  subdir.mk  tim.d  usart.cyclo  usart.d
STM32_PROJEKT/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
STM32_kiCad_Schemat/: STM32_kiCad_Schemat.kicad_prl  STM32_kiCad_Schemat.kicad_pro  STM32_kiCad_Schemat.kicad_sch
